# krakenctl

./: .gitignore  Cargo.toml  README.md  build.rs  config.ini
libusb/: place libusb files here.txt
src/: api.rs  imagetools.rs  input.rs  main.rs  managerhid.rs  managerlibusb.rs  managerrusb.rs  managerusbxpress.rs  settings.rs
