[package]
name = "krakenctl"
edition = "2021"
version = "0.3.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9" #for usb
#libusb = "0.3" #raw usb
#hidapi = "1.3.3" #hid through kernel driver
image = "0.23.6"     #for editing images. Use 0.23.6 because 0.24.1 not compat with imageproc
imageproc = "0.22.0" # for editing images
rand = "0.8.4"
rusttype = "0.9.2"
#sysinfo = "0.23.1"
clap = "3.0.14"
regex = "1.5.4"
unicode-segmentation = "1.9.0"
gif = "0.11.3"
chrono = "0.4.19"
dirs = "4.0.0"
run_script = "0.9.0"           #for running script
signal-hook = "0.3.13"         #catch forced exits, so we can cleanup
#silabs_usb_xpress="0.3.1" #usbxpress driver for windows
