[package]
name = "krakenctl"
edition = "2021"
version = "0.3.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9"         #for usb
image = "0.25.2"     #for editing images. Use 0.23.6 because 0.24.1 not compat with imageproc
imageproc = "0.25.0" # for editing image
ab_glyph = "0.2.28"  #for font rendering for imageproc

rand = "0.8"
clap = { version = "4.5.16", features = ["derive"] }
regex = "1.10.6"
unicode-segmentation = "1.11.0"
gif = "0.13.1"
chrono = "0.4.38"
dirs = "5.0.1"
run_script = "0.10.1"                                #for running script
signal-hook = "0.3.17"                               #catch forced exits, so we can cleanup
systemstat = "0.2"                                   #for getting system info
